--- a/home.css
+++ b/home.css
@@ -92,7 +92,7 @@ body {
     gap: 8px;
     padding: 8px 15px;
     border-radius: 5px;
-    background-color: #0077b5;
+    background-color: #011124;
     color: white;
     text-decoration: none;
     font-weight: bold;
