--- a/home.css
+++ b/home.css
@@ -88,6 +88,7 @@ body {
 
 .social-button {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 8px;
     padding: 8px 15px;
@@ -97,6 +98,7 @@ body {
     text-decoration: none;
     font-weight: bold;
     transition: background 0.3s;
+    flex-wrap
 }
 
 
