--- a/home.css
+++ b/home.css
@@ -86,19 +86,38 @@ body {
 }
 
 
+.social-links {
+    display: flex
+;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 10px;
+}
+img {
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
+
+.social-button:nth-child(2) {
+    background-color: #333;
+}
 .social-button {
-    display: flex;
-    flex-wrap: wrap;
+    display: flex
+;
     align-items: center;
     gap: 8px;
     padding: 8px 15px;
     border-radius: 5px;
-    background-color: #011124;
+    background-color: #0077b5;
     color: white;
     text-decoration: none;
     font-weight: bold;
     transition: background 0.3s;
-    flex-wrap
+}
+
+.social-icon {
+    width: 20px;
+    height: 20px;
 }
 
 
